test/JDBC/expected/BABEL_539-vu-verify.out
EXEC babel_539_prepare_proc
GO
~~ERROR (Code: 33557097)~~

~~ERROR (Message: syntax error near 'identity')~~


DROP TABLE IF EXISTS babel_539NewTable_proc;
GO

DROP TABLE IF EXISTS babel_539NewTable1;
GO

--calling internal function directly
SELECT col1, IDENTITY_INTO(1, 1,1) as id_num INTO babel_539NewTempTable2 FROM babel_539OldTable;
GO
~~ERROR (Code: 33557097)~~

~~ERROR (Message: function IDENTITY_INTO does not exist)~~


SELECT sys.IDENTITY(23, 1);
GO
~~ERROR (Code: 33557097)~~

~~ERROR (Message: Incorrect syntax near ')')~~


SELECT IDENTITY(int, 21);
GO
~~ERROR (Code: 33557097)~~

~~ERROR (Message: Incorrect syntax near ')')~~


SELECT sys.IDENTITY_INTO(23, 1, 1);
GO
~~ERROR (Code: 33557097)~~

~~ERROR (Message: function IDENTITY_INTO does not exist)~~


SELECT sys.identity_into_int(23, 1, 1);
GO
~~ERROR (Code: 33557097)~~

~~ERROR (Message: function identity_into_int does not exist)~~


SELECT sys.IDENTITY_INTO_SMALLINT(21, 1, 1);
GO
~~ERROR (Code: 33557097)~~

~~ERROR (Message: function IDENTITY_INTO_SMALLINT does not exist)~~


SELECT sys.IDENTITY_INTO_BIGINT(20, 1, 1);
GO
~~ERROR (Code: 33557097)~~

~~ERROR (Message: function IDENTITY_INTO_BIGINT does not exist)~~


SELECT sys.IDENTITY_INTO_INT(23, 1, 1);
GO
~~ERROR (Code: 33557097)~~

~~ERROR (Message: function IDENTITY_INTO_INT does not exist)~~


SELECT col1, IDENTITY(int,1,1) AS id_num INTO #babel_539NewTable1 FROM babel_539OldTable;
GO
~~ERROR (Code: 33557097)~~

~~ERROR (Message: syntax error near 'identity')~~


SELECT col1, IDENTITY(int, 1) AS id_num INTO #babel_539NewTable1 FROM babel_539OldTable;
GO
~~ERROR (Code: 33557097)~~

~~ERROR (Message: syntax error near 'identity')~~


SELECT col1, IDENTITY(int) AS id_num INTO #babel_539NewTable1 FROM babel_539OldTable;
GO
~~ERROR (Code: 33557097)~~

~~ERROR (Message: syntax error near 'identity')~~

